Fix View on Small Phones

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: fit-content;
   margin-top: 60px;
-  padding: 60px;
+  padding: 60px 0 ;
   display: flex;
   gap: 20px;
   justify-content: center;
