--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -10,7 +10,7 @@
     height:fit-content;
     padding: 60px 0 ;
     display: grid;
-    grid-template-columns: repeat(auto-fill , minmax(450px , 1fr));
+    grid-template-columns: repeat(auto-fill , minmax(300px , 1fr));
     gap: 12px;
    
 }
