--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: fit-content;
   margin-top: 60px;
-  padding: 60px;
+  padding: 60px 0;
   display: flex;
   justify-content: space-between;
   gap: 12px;
